syntax = "proto3";

option go_package = "edm-entities-signing-workflows-infrastructure-repositories-signing-workflows-contracts";

package Edm.Entities.Signing.Workflows.Infrastructure.Abstractions;

option csharp_namespace = "Edm.Entities.Signing.Workflows.Infrastructure.Repositories.SigningWorkflows.Contracts";

import "Repositories/Workflows/Contracts/Data/Parameters/ElectronicDetails/Documents/States/Statuses/signing_document_status.proto";

import "google/protobuf/timestamp.proto";

message SigningDocumentStateDb {
  SigningDocumentStatusDb status = 1;
  string status_description = 2;
  google.protobuf.Timestamp status_changed_at = 3;
}
