syntax = "proto3";

option go_package = "edm-entities-signing-workflows-infrastructure-repositories-signing-workflows-contracts";

package Edm.Entities.Signing.Workflows.Infrastructure.Abstractions;

option csharp_namespace = "Edm.Entities.Signing.Workflows.Infrastructure.Repositories.SigningWorkflows.Contracts";

import "Repositories/Workflows/Contracts/Data/Parameters/ElectronicDetails/signing_electronic_details.proto";

import "google/protobuf/wrappers.proto";

message SigningParametersDb {
  optional google.protobuf.StringValue document_clerk_id = 1;
  optional SigningElectronicDetailsDb electronic_details = 2;
}
